; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/doc/extr_chew.c_check_range.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/doc/extr_chew.c_check_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tos = common dso_local global i64 0, align 8
@stack = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [26 x i8] c"underflow in string stack\00", align 1
@STACK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [25 x i8] c"overflow in string stack\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @check_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_range() #0 {
  %1 = load i64, i64* @tos, align 8
  %2 = load i64, i64* @stack, align 8
  %3 = icmp slt i64 %1, %2
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 @die(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %6

6:                                                ; preds = %4, %0
  %7 = load i64, i64* @tos, align 8
  %8 = load i64, i64* @stack, align 8
  %9 = load i64, i64* @STACK, align 8
  %10 = add nsw i64 %8, %9
  %11 = icmp sge i64 %7, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %6
  %13 = call i32 @die(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %6
  ret void
}

declare dso_local i32 @die(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
